After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783885 - search: Fix memory leak
search: Fix memory leak
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Search
unspecified
Other All
: Normal normal
: ---
Assigned To: Cosimo Cecchi
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-17 05:34 UTC by Mohammed Sadiq
Modified: 2017-06-19 11:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
search: Fix memory leak (824 bytes, patch)
2017-06-17 05:34 UTC, Mohammed Sadiq
committed Details | Review
search: Fix a GFile leak (983 bytes, patch)
2017-06-19 09:31 UTC, Rui Matos
committed Details | Review

Description Mohammed Sadiq 2017-06-17 05:34:06 UTC
.
Comment 1 Mohammed Sadiq 2017-06-17 05:34:14 UTC
Created attachment 353933 [details] [review]
search: Fix memory leak

The container returned by g_variant_get_strv() should be
freed with g_free().
Comment 2 Cosimo Cecchi 2017-06-19 01:19:43 UTC
Review of attachment 353933 [details] [review]:

Looks correct to me.
Comment 3 Rui Matos 2017-06-19 09:31:26 UTC
Created attachment 354029 [details] [review]
search: Fix a GFile leak

--

Seems like there's one more leak here.
Comment 4 Cosimo Cecchi 2017-06-19 10:17:21 UTC
Review of attachment 354029 [details] [review]:

Indeed -- looks good.
Comment 5 Rui Matos 2017-06-19 11:18:48 UTC
Attachment 353933 [details] pushed as 38ac1d1 - search: Fix memory leak
Attachment 354029 [details] pushed as f32b305 - search: Fix a GFile leak