search: Fix memory leak

The container returned by g_variant_get_strv() should be
freed with g_free().

https://bugzilla.gnome.org/show_bug.cgi?id=783885